# android-cmake-sample

./: .gitignore  Makefile  README.md  build.gradle.kts  conanfile.py  gradle.properties  settings.gradle.kts  verbosidade.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/fr/bowserf/cmakesample/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
conan/: android_profile
shared_library/: CMakeLists.txt  library_debug_build.sh
shared_library/src/: Addition.cpp
static_library/: CMakeLists.txt  library_build.sh
static_library/src/: Subtraction.cpp
subdirectory/: CMakeLists.txt
subdirectory/src/: Multiply.cpp
